# words

./: index.html  readme.md  stack.yaml  stream-words.cabal  words.cabal
app/: example.lhs  words.lhs
other/: header.md  table.md
test/: test.hs
